# OrangePi_STM32_for_ROV

./: README.md
OrangePi_STM32_for_ROV/: README.md
OrangePi_STM32_for_ROV/docs/: handover_guide.md  protocol_v1.md  test_plan_en.md
OrangePi_STM32_for_ROV/orangepi_send/: CMakeLists.txt  README.md
OrangePi_STM32_for_ROV/orangepi_send/include/: PwmFrameBuilder.h  UdpSender.h  crc16_ccitt.h  libpwm_host.h  protocol_pack.h  protocol_pack.hpp  pwm_control.h
OrangePi_STM32_for_ROV/orangepi_send/src/: PwmFrameBuilder.cpp  UdpSender.cpp  crc16_ccitt.cpp  libpwm_host.c  main.cpp  protocol_pack.c  pwm_control.c
OrangePi_STM32_for_ROV/receive_pwm_stm32/: .mxproject  receive_pwm_stm32.ioc
OrangePi_STM32_for_ROV/receive_pwm_stm32/Core/Inc/: board.h  config.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
OrangePi_STM32_for_ROV/receive_pwm_stm32/MDK-ARM/: receive_pwm_stm32.uvguix.w  receive_pwm_stm32.uvoptx  receive_pwm_stm32.uvprojx  startup_stm32f407xx.lst
docs/: handover_guide.md  protocol_v1.md  test_plan_en.md
orangepi_send/: CMakeLists.txt  README.md
orangepi_send/include/: crc16_ccitt.h  protocol_pack.h  protocol_pack.hpp
orangepi_send/src/: crc16_ccitt.cpp  protocol_pack.c
pwm_control_program/: CMakeLists.txt
pwm_control_program/src/: main.cpp  pwm_teleop.cpp
receive_pwm_stm32/: receive_pwm_stm32.ioc
receive_pwm_stm32/Core/Inc/: board.h  config.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
receive_pwm_stm32/Core/Src/: dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
receive_pwm_stm32/MDK-ARM/: receive_pwm_stm32.uvguix.w  receive_pwm_stm32.uvoptx  receive_pwm_stm32.uvprojx  startup_stm32f407xx.lst
receive_pwm_stm32/MDK-ARM/receive_pwm_stm32/: crc16_ccitt.crf  crc16_ccitt.d  dma.crf  dma.d  driver_pwm.d  gpio.d  main.d  parse_pwm.crf  parse_pwm.d  protocol_v1.crf  protocol_v1.d  receive_pwm_stm32.build_log.htm  receive_pwm_stm32.hex  receive_pwm_stm32.htm  receive_pwm_stm32.lnp  receive_pwm_stm32.map  startup_stm32f407xx.d  stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_msp.crf  stm32f4xx_hal_msp.d  stm32f4xx_hal_pwr.crf  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.crf  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.crf  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.crf  stm32f4xx_hal_tim_ex.d  (+11 more)
receive_pwm_stm32/Source/Inc/: Driver_pwm.h  Parse_pwm.h  Uart_service.h  crc16_ccitt.h  protocol_v1.h
receive_pwm_stm32/Source/Src/: Driver_pwm.c  Parse_pwm.c  Uart_service.c  crc16_ccitt.c  protocol_v1.c
(+127 files in other folders)
